# aol-dl

./: .gitignore  README.md  create_data_lists.py  demonstration.py  export_onnx.py  extract_loss.py  get_bicubic.py  inference.py  inference_resnet.py  inference_srresnet.py  onnx.html  pyproject.toml  requirements.txt  train_gan.py  train_resnet.py  train_srgan.py
.github/workflows/: site.yml
frontend/: ONNX-SETUP.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: test-inference.html  test-model.html
frontend/public/models/: README.md
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/: BothModelsView.tsx  ImageUpload.tsx  InferenceProgress.tsx  LoadingScreen.tsx  ModelSelector.tsx  OverlayProgress.tsx  SideBySideView.tsx  SliderView.tsx  SyncZoomView.tsx  TileOverlay.tsx  ViewModeToggle.tsx  index.ts
frontend/src/types/: index.ts
frontend/src/utils/: imageUtils.ts  onnxService.ts
frontend/src/workers/: onnxWorker.ts
models/: __init__.py  esrgan.py  resnet.py  srgan.py  truncated_vgg19.py
utils/: __init__.py  dataset.py  transforms.py
