[project]
name = "aol-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2025.10.5",
    "cheesechaser>=0.2.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.3.3",
    "py-spy>=0.4.1",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]
